crates/aes_parser/src/lexer/snapshots/aes_parser__lexer__tests__snapshots__tokens_empty_type.snap
---
source: crates/aes_parser/src/lexer/tests.rs
expression: tokens
---
[
    Token {
        span: Span {
            start: 0,
            size: 4,
        },
        kind: KwType,
    },
    Token {
        span: Span {
            start: 4,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 5,
            size: 4,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 9,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 10,
            size: 1,
        },
        kind: LBrace,
    },
    Token {
        span: Span {
            start: 11,
            size: 1,
        },
        kind: RBrace,
    },
    Token {
        span: Span {
            start: 12,
            size: 1,
        },
        kind: Whitespace,
    },
]
