crates/aes_parser/src/lexer/snapshots/aes_parser__lexer__tests__snapshots__tokens_test_block.snap
---
source: crates/aes_parser/src/lexer/tests.rs
expression: tokens
---
[
    Token {
        span: Span {
            start: 0,
            size: 4,
        },
        kind: KwTest,
    },
    Token {
        span: Span {
            start: 4,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 5,
            size: 8,
        },
        kind: String,
    },
    Token {
        span: Span {
            start: 13,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 14,
            size: 1,
        },
        kind: LBrace,
    },
    Token {
        span: Span {
            start: 15,
            size: 3,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 18,
            size: 9,
        },
        kind: KwRelations,
    },
    Token {
        span: Span {
            start: 27,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 28,
            size: 1,
        },
        kind: LBrace,
    },
    Token {
        span: Span {
            start: 29,
            size: 5,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 34,
            size: 3,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 37,
            size: 1,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 38,
            size: 6,
        },
        kind: String,
    },
    Token {
        span: Span {
            start: 44,
            size: 1,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 45,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 46,
            size: 1,
        },
        kind: Dot,
    },
    Token {
        span: Span {
            start: 47,
            size: 5,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 52,
            size: 1,
        },
        kind: Colon,
    },
    Token {
        span: Span {
            start: 53,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 54,
            size: 4,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 58,
            size: 1,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 59,
            size: 7,
        },
        kind: String,
    },
    Token {
        span: Span {
            start: 66,
            size: 1,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 67,
            size: 1,
        },
        kind: Semicolon,
    },
    Token {
        span: Span {
            start: 68,
            size: 3,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 71,
            size: 1,
        },
        kind: RBrace,
    },
    Token {
        span: Span {
            start: 72,
            size: 4,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 76,
            size: 6,
        },
        kind: KwAssert,
    },
    Token {
        span: Span {
            start: 82,
            size: 1,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 83,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 84,
            size: 3,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 87,
            size: 1,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 88,
            size: 6,
        },
        kind: String,
    },
    Token {
        span: Span {
            start: 94,
            size: 1,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 95,
            size: 1,
        },
        kind: Dot,
    },
    Token {
        span: Span {
            start: 96,
            size: 6,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 102,
            size: 1,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 103,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 104,
            size: 4,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 108,
            size: 1,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 109,
            size: 7,
        },
        kind: String,
    },
    Token {
        span: Span {
            start: 116,
            size: 1,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 117,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 118,
            size: 1,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 119,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 120,
            size: 1,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 121,
            size: 1,
        },
        kind: Semicolon,
    },
    Token {
        span: Span {
            start: 122,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 123,
            size: 1,
        },
        kind: RBrace,
    },
    Token {
        span: Span {
            start: 124,
            size: 1,
        },
        kind: Whitespace,
    },
]
