crates/aes_parser/src/lexer/snapshots/aes_parser__lexer__tests__snapshots__tokens_traversal.snap
---
source: crates/aes_parser/src/lexer/tests.rs
expression: tokens
---
[
    Token {
        span: Span {
            start: 0,
            size: 4,
        },
        kind: KwType,
    },
    Token {
        span: Span {
            start: 4,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 5,
            size: 1,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 6,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 7,
            size: 1,
        },
        kind: LBrace,
    },
    Token {
        span: Span {
            start: 8,
            size: 3,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 11,
            size: 3,
        },
        kind: KwDef,
    },
    Token {
        span: Span {
            start: 14,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 15,
            size: 1,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 16,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 17,
            size: 1,
        },
        kind: Eq,
    },
    Token {
        span: Span {
            start: 18,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 19,
            size: 1,
        },
        kind: Dot,
    },
    Token {
        span: Span {
            start: 20,
            size: 3,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 23,
            size: 1,
        },
        kind: Dot,
    },
    Token {
        span: Span {
            start: 24,
            size: 5,
        },
        kind: Ident,
    },
    Token {
        span: Span {
            start: 29,
            size: 1,
        },
        kind: Semicolon,
    },
    Token {
        span: Span {
            start: 30,
            size: 1,
        },
        kind: Whitespace,
    },
    Token {
        span: Span {
            start: 31,
            size: 1,
        },
        kind: RBrace,
    },
    Token {
        span: Span {
            start: 32,
            size: 1,
        },
        kind: Whitespace,
    },
]
